<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014-2017 The OmniROM Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Device Settings -->
    <string name="device_title">OnePlus Settings</string>
    <string name="device_summary">Adjust OnePlus specific device settings</string>

    <!-- Alert Slider -->
    <string name="slider_title">Alert Slider</string>
    <string name="mute_media_title">Mute media volume</string>
    <string name="mute_media_summary">Turn off media volume when the alert slider is set to silent</string>
    <string name="mute_media_warning">This will only take effect for speaker</string>

    <!-- Custom seekbar -->
    <string name="custom_seekbar_value">Value: <xliff:g id="v">%s</xliff:g></string>
    <string name="custom_seekbar_default_value">Default</string>
    <string name="custom_seekbar_default_value_to_set">Default value: <xliff:g id="v">%s</xliff:g>\nLong press to set</string>
    <string name="custom_seekbar_default_value_is_set">Default value is set</string>

    <!-- Display Modes -->
    <string name="display_title">Display Modes</string>
    <string name="hbm_mode_summary">Instantly enable the peak luminance of the display</string>
    <string name="hbm_mode_title">High brightness</string>
    <string name="auto_hbm_summary">Enable peak luminance based on sunlight</string>
    <string name="auto_hbm_title">Automatic High brightness</string>
    <string name="auto_hbm_threshold_title">Automatic High brightness threshold (lux)</string>
    <string name="auto_hbm_threshold_summary">Adjust peak luminance of the display </string>
    <string name="tile_hbm_mode">High brightness</string>
    <string name="dc_mode_summary">Dim backlight by adjusting DC current drawn to the display</string>
    <string name="dc_mode_title">DC Dimming</string>
    <string name="tile_dc_mode">DC Dimming</string>

    <!-- Dolby -->
    <string name="dolby_category">Dolby</string>
    <string name="dolby_title">Dolby Atmos</string>
    <string name="dolby_summary">Configure the audio output based on media content</string>

    <!-- Doze -->
    <string name="ambient_enable">Use ambient display</string>
    <string name="ambient_display_enable_summary">Wake screen when you receive notifications</string>
    <string name="doze_panel_title">Doze</string>
    <string name="ambient_display_gestures_title">Ambient display gestures</string>
    <string name="ambient_display_gestures_summary">Additional gestures to wake the screen</string>
    <string name="doze_settings_help_title">Help</string>
    <string name="doze_settings_help_text">These features use sensor events to launch a doze notification pulse. The chosen sensor is only enabled when the device receives a notification, this helps to reduce battery usage. There is also an option to enable the chosen sensor as soon as the screen turns off, this will cause higher battery usage.</string>
    <string name="dialog_ok">OK</string>
    <string name="switch_bar_off">Off</string>
    <string name="switch_bar_on">On</string>
    <string name="ambient_display_title">Ambient display</string>
    <string name="ambient_display_always_on_title">Always on</string>
    <string name="ambient_display_always_on_summary">Show time, notification icons, and other info. Increased battery usage.</string>
    <string name="pickup_sensor_title">Pickup sensor</string>
    <string name="pick_up_gesture_title">Pick-up</string>
    <string name="disabled">Disabled</string>
    <string name="pick_up_gesture_summary">Pulse notifications on pick-up</string>
    <string name="pick_up_wake_gesture_summary">Wake device on pick-up</string>
    <string name="proximity_sensor_title">Proximity sensor</string>
    <string name="pocket_gesture_title">Pocket</string>
    <string name="pocket_gesture_summary">Pulse notifications on removal from pocket</string>

    <!-- FPS Info -->
    <string name="fps_title">FPS Info</string>
    <string name="fps_info_title">FPS Overlay</string>
    <string name="fps_info_summary">Show overlay with current frames per second</string>
    <string name="fps_info_color_title">Text Color</string>
    <string name="fps_info_color_green">Green</string>
    <string name="fps_info_color_red">Red</string>
    <string name="fps_info_color_blue">Blue</string>
    <string name="fps_info_color_yellow">Yellow</string>
    <string name="fps_info_color_black">Black</string>
    <string name="fps_info_color_accent">Follow System</string>
    <string name="fps_info_position_title">Overlay Position</string>
    <string name="fps_info_position_top_left">Top left</string>
    <string name="fps_info_position_top_center">Top center</string>
    <string name="fps_info_position_top_right">Top right</string>
    <string name="fps_info_position_bottom_left">Bottom left</string>
    <string name="fps_info_position_bottom_center">Bottom center</string>
    <string name="fps_info_position_bottom_right">Bottom right</string>
    <string name="fps_info_text_size_title">Text Size</string>

    <!-- Network -->
    <string name="network_title">Network</string>
    <string name="nr_mode_switcher_title">5G Modes Switcher</string>
    <string name="nsa_only">NSA Only</string>
    <string name="sa_only">SA Only</string>
    <string name="nsa_sa">NSA + SA</string>
    <string name="nr_mode_switcher_warning">Please set again after reboot/changed data sim card</string>
    <string name="service_not_ready">Service not ready, please try again</string>
    <string name="unavailable_sim_slot">Unable to get current mobile data slot, please try again</string>

    <!-- Touchpanel -->
    <string name="touchpanel_title">Touchpanel</string>
    <string name="game_mode_title">Touch Sample</string>
    <string name="game_mode_summary">Boost touch sampling rate for all applications</string>
    <string name="game_mode_warning">Increases power consumption</string>
    <string name="edge_touch_title">TP Edge Limit</string>
    <string name="edge_touch_summary">Disable the touchpanels edge limit</string>
    <string name="edge_touch_warning">Increases possibility of accidental touch</string>

    <!-- Unsupported feature -->
    <string name="unsupported_feature">This feature is unavailable on current kernel</string>

    <!-- Vibration Strength -->
    <string name="category_vibrator">Vibration Strength</string>
    <string name="vib_strength_title_head">System Strength</string>
    <string name="vib_strength_summary_head">Define the strength of the vibration motor</string>

    <!-- QS tile -->
    <string name="qs_tile_status_off">Off</string>
    <string name="qs_tile_status_on">On</string>
</resources>
