<?xml version="1.0" encoding="UTF-8"?>
<!--
     Copyright (C) 2022 The Nameless-AOSP Project
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/org.nameless.device.OnePlusSettings"
    android.title="@string/device_title">

    <PreferenceCategory
        android:key="slider"
        android:title="@string/slider_title">

        <org.nameless.device.OnePlusSettings.Preferences.SwitchPreference
            android:key="mute_media"
            android:icon="@drawable/ic_audio_media"
            android:title="@string/mute_media_title"
            android:summary="@string/mute_media_summary"
            android:persistent="true" />

        <Preference
            android:icon="@drawable/ic_info_outline"
            android:summary="@string/mute_media_warning"
            android:persistent="false"
            android:selectable="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="display"
        android:title="@string/display_title">

        <org.nameless.device.OnePlusSettings.Preferences.SwitchPreference
            android:key="auto_hbm"
            android:icon="@drawable/ic_autohbm_mode"
            android:summary="@string/auto_hbm_summary"
            android:title="@string/auto_hbm_title" />

        <org.nameless.device.OnePlusSettings.Preferences.AutoHBMThresholdPreference
            android:key="auto_hbm_threshold"
            android:icon="@drawable/ic_autohbm_threshold"
            android:title="@string/auto_hbm_threshold_title"
            android:summary="@string/auto_hbm_threshold_summary" />

        <org.nameless.device.OnePlusSettings.Preferences.SwitchPreference
            android:key="dc_dim"
            android:icon="@drawable/ic_dc_mode"
            android:summary="@string/dc_mode_summary"
            android:title="@string/dc_mode_title" />

        <org.nameless.device.OnePlusSettings.Preferences.SwitchPreference
            android:key="hbm"
            android:icon="@drawable/ic_hbm_mode"
            android:summary="@string/hbm_mode_summary"
            android:title="@string/hbm_mode_title"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="doze"
        android:title="@string/doze_panel_title">

        <Preference
            android:key="advanced_doze_settings"
            android:icon="@drawable/ic_doze"
            android:title="@string/ambient_display_gestures_title"
            android:summary="@string/ambient_display_gestures_summary"
            android:persistent="false" >
            <intent android:action="android.intent.action.MAIN"
                    android:targetClass="org.nameless.device.OnePlusSettings.Doze.DozeSettingsActivity" />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="fps"
        android:title="@string/fps_title">

        <org.nameless.device.OnePlusSettings.Preferences.SwitchPreference
            android:key="fps_info"
            android:icon="@drawable/ic_fps_overlay"
            android:title="@string/fps_info_title"
            android:summary="@string/fps_info_summary"
            android:persistent="true" />

        <ListPreference
            android:key="fps_info_position"
            android:defaultValue="0"
            android:icon="@drawable/ic_fps_position"
            android:title="@string/fps_info_position_title"
            android:summary="%s"
            android:entries="@array/fps_info_position_entries"
            android:entryValues="@array/fps_info_position_values" />

        <ListPreference
            android:key="fps_info_color"
            android:defaultValue="0"
            android:icon="@drawable/ic_fps_color"
            android:title="@string/fps_info_color_title"
            android:summary="%s"
            android:entries="@array/fps_info_color_entries"
            android:entryValues="@array/fps_info_color_values" />

        <org.nameless.device.OnePlusSettings.Preferences.CustomSeekBarPreference
            android:key="fps_info_text_size"
            android:icon="@drawable/ic_fps_text"
            android:title="@string/fps_info_text_size_title"
            android:persistent="true"
            android:max="5"
            android:min="1"
            settings:units=""
            android:defaultValue="3" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="network"
        android:title="@string/network_title">

        <ListPreference
            android:key="nr_mode_switcher"
            android:defaultValue="2"
            android:icon="@drawable/ic_5g"
            android:title="@string/nr_mode_switcher_title"
            android:summary="%s"
            android:entries="@array/nr_mode_switcher_entries"
            android:entryValues="@array/nr_mode_switcher_values" />

        <Preference
            android:icon="@drawable/ic_info_outline"
            android:summary="@string/nr_mode_switcher_warning"
            android:persistent="false"
            android:selectable="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="touchpanel"
        android:title="@string/touchpanel_title">

        <org.nameless.device.OnePlusSettings.Preferences.SwitchPreference
            android:key="edge_touch"
            android:icon="@drawable/ic_edge_touch"
            android:summary="@string/edge_touch_summary"
            android:title="@string/edge_touch_title" />

        <Preference
            android:icon="@drawable/ic_info_outline"
            android:summary="@string/edge_touch_warning"
            android:persistent="false"
            android:selectable="false" />

        <org.nameless.device.OnePlusSettings.Preferences.SwitchPreference
            android:key="game_mode"
            android:icon="@drawable/ic_game_mode"
            android:summary="@string/game_mode_summary"
            android:title="@string/game_mode_title" />

        <Preference
            android:key="game_mode_info"
            android:icon="@drawable/ic_info_outline"
            android:summary="@string/game_mode_warning"
            android:persistent="false"
            android:selectable="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="vibrator"
        android:title="@string/category_vibrator">

        <org.nameless.device.OnePlusSettings.Preferences.VibratorStrengthPreference
            android:key="vib_strength"
            android:icon="@drawable/ic_vibration"
            android:title="@string/vib_strength_title_head"
            android:summary="@string/vib_strength_summary_head"
            android:persistent="true"
            android:max="3"
            android:min="0"
            settings:units=""
            android:defaultValue="3" />
    </PreferenceCategory>
</PreferenceScreen>
